<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_new_avatar"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="600dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TableRow
            android:layout_width="367dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/germany"
                app:srcCompat="@drawable/flag_00" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/belgium"
                app:srcCompat="@drawable/flag_01" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/france"
                app:srcCompat="@drawable/flag_02" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/italy"
                app:srcCompat="@drawable/flag_03" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/ireland"
                app:srcCompat="@drawable/flag_04"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/sweden"
                app:srcCompat="@drawable/flag_05"
                tools:ignore="ImageContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/finland"
                app:srcCompat="@drawable/flag_06" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/denmark"
                app:srcCompat="@drawable/flag_07" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/norway"
                app:srcCompat="@drawable/flag_08" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/iceland"
                app:srcCompat="@drawable/flag_09" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>